--- a/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.scss
+++ b/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.scss
@@ -6,7 +6,7 @@ mat-form-field{
     flex:1 1 100px;
 }
 .mat-column-ExamId,
-.mat-column-EvaluationType,
+.mat-column-Evaluation,
 .mat-column-Title,
 .mat-column-ClassId,
 .mat-column-ClassSubjectId{
