--- a/src/app/modules/evaluation/studentevaluation/studentevaluation.component.html
+++ b/src/app/modules/evaluation/studentevaluation/studentevaluation.component.html
@@ -17,10 +17,10 @@
                     </mat-autocomplete>
                 </mat-form-field>
                 <mat-form-field appearance="outline" [style.width.px]="150">
-                    <mat-label>Type</mat-label>
-                    <mat-select formControlName="searchEvaluationTypeId">
-                        <mat-option *ngFor="let item of EvaluationTypes" [value]="item.MasterDataId">
-                            {{item.MasterDataName}}
+                    <mat-label>Evaluation</mat-label>
+                    <mat-select formControlName="searchEvaluationMasterId">
+                        <mat-option *ngFor="let item of EvaluationMaster" [value]="item.EvaluationMasterId">
+                            {{item.EvaluationName}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
