--- a/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.scss
+++ b/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.scss
@@ -7,7 +7,7 @@ mat-form-field{
 }
 .mat-column-ExamId,
 .mat-column-Evaluation,
-.mat-column-Title,
+.mat-column-EvaluationName,
 .mat-column-ClassId,
 .mat-column-ClassSubjectId{
     
