--- a/src/app/modules/evaluation/classevaluation/classevaluation.component.html
+++ b/src/app/modules/evaluation/classevaluation/classevaluation.component.html
@@ -66,7 +66,7 @@
                                 <mat-select
                                 (selectionChange)="onBlur(element)"
                                     [(ngModel)]="element.ClassEvalSubCategoryId" [value]="element.ClassEvalSubCategoryId">
-                                    <mat-option *ngFor="let item of SubCategories" [value]="item.MasterDataId">
+                                    <mat-option *ngFor="let item of element.SubCategories" [value]="item.MasterDataId">
                                         {{item.MasterDataName}}</mat-option>
                                 </mat-select>
                             </mat-form-field>
@@ -119,9 +119,13 @@
                     </ng-container>
                     <ng-container matColumnDef="Action">
                         <mat-header-cell *matHeaderCellDef>
-                            <button [disabled]="loading" matTooltip="save all" mat-mini-fab (click)="AddNew()">
+                            <button [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="AddNew()">
                                 <mat-icon>add</mat-icon>
                             </button>
+                            <button [disabled]="loading" matTooltip="save all" mat-mini-fab (click)="SaveAll()">
+                                <mat-icon>all_out</mat-icon>
+                            </button>
+
                         </mat-header-cell>
                         <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
                             <button (click)="viewchild(element)" mat-mini-fab matTooltip="view answer options">
