--- a/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.html
+++ b/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.html
@@ -5,7 +5,7 @@
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <!-- <alert></alert> -->
     <div style="padding: 15px;" fxLayout="row wrap">
-      
+
         <div style="width: 100%;">
             <mat-table style="overflow: auto;min-width: 60vw;min-height: 60vh;" #table [dataSource]="dataSource">
                 <ng-container matColumnDef="EvaluationMasterId">
@@ -19,7 +19,7 @@
                     <mat-header-cell *matHeaderCellDef>Evaluation
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                        <mat-form-field appearance="outline">
                             <input autocomplete="Off" matInput (blur)="onBlur(element)" [value]="element.EvaluationName"
                                 [(ngModel)]="element.EvaluationName" [maxlength]="50">
                         </mat-form-field>
@@ -30,10 +30,8 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input matInput (blur)="onBlur(element)" 
-                            autocomplete="Off"
-                            [value]="element.Description"
-                            [(ngModel)]="element.Description" [maxlength]="256">
+                            <input matInput (blur)="onBlur(element)" autocomplete="Off" [value]="element.Description"
+                                [(ngModel)]="element.Description" [maxlength]="256">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
@@ -50,18 +48,18 @@
                     <mat-header-cell *matHeaderCellDef> Display Result </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                        [checked]="element.DisplayResult==1?true:false">
-                    </mat-checkbox>
+                            [checked]="element.DisplayResult==1?true:false">
+                        </mat-checkbox>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="ProvideCertificate">
                     <mat-header-cell *matHeaderCellDef> Provide Certificate </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                        [checked]="element.ProvideCertificate==1?true:false">
-                    </mat-checkbox>
+                            [checked]="element.ProvideCertificate==1?true:false">
+                        </mat-checkbox>
                     </mat-cell>
-                </ng-container> 
+                </ng-container>
                 <ng-container matColumnDef="FullMark">
                     <mat-header-cell *matHeaderCellDef>Full Mark
                     </mat-header-cell>
@@ -81,7 +79,7 @@
                                 [(ngModel)]="element.PassMark" [maxlength]="3">
                         </mat-form-field>
                     </mat-cell>
-                </ng-container>               
+                </ng-container>
                 <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef>Active
                     </mat-header-cell>
@@ -99,9 +97,18 @@
                         </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save"
-                            mat-mini-fab (click)="UpdateOrSave(element)">
+                        <button style="margin-right: 15px;"
+                            [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" mat-mini-fab
+                            (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
+                        </button>
+                        <button [disabled]="loading 
+                                || !element.Action 
+                                || Permission !='rwd'" 
+                                matTooltip="delete" 
+                                mat-mini-fab 
+                                (click)="Delete(element)">
+                            <mat-icon>delete</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
@@ -111,9 +118,9 @@
             </mat-table>
             <mat-paginator [pageSizeOptions]="[10,20,100]"></mat-paginator>
         </div>
-        <button type="button" class="btn btn-outline-secondary mr-2" placement="top"
+        <!-- <button type="button" class="btn btn-outline-secondary mr-2" placement="top"
             ngbPopover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." popoverTitle="Popover on top">
             Popover on top
-        </button>
+        </button> -->
     </div>
 </div>
