--- a/src/app/modules/evaluation/evaluationresult/evaluationresult.component.html
+++ b/src/app/modules/evaluation/evaluationresult/evaluationresult.component.html
@@ -81,7 +81,7 @@
                         <button style="margin-right: 15px;"
                             [disabled]="loading || !element.Action || Permission=='read' || EvaluationStarted"
                             matTooltip="start" mat-mini-fab color="accent" (click)="StartEvaluation(element)">
-                            <mat-icon>view</mat-icon>
+                            <mat-icon>pageview</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
