--- a/src/app/modules/misc/calendar/calendar.component.scss
+++ b/src/app/modules/misc/calendar/calendar.component.scss
@@ -3,3 +3,10 @@
     height:150px;
     overflow-wrap: break-word;
 }
+.portlet.calendar .fc-event .fc-time {
+    color: gray;
+}
+
+.portlet.calendar .fc-event .fc-title {
+    color: gray;
+}
