--- a/src/app/modules/schooltimetable/schooltimetable/schooltimetable.component.scss
+++ b/src/app/modules/schooltimetable/schooltimetable/schooltimetable.component.scss
@@ -14,6 +14,9 @@ mat-cell{
     padding: 10px;
     align-self: stretch;
 }
+.mat-column-Action{
+    flex: 1 1 80px;
+}
 .mat-table {
     display: table;
     width: 100%;
