--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -46,7 +46,7 @@
             </button>
         </form>
         <br>
-        <div class="example-container mat-elevation-z8">
+        <!-- <div class="example-container mat-elevation-z8"> -->
             <mat-table #table [dataSource]="dataSource" matSort>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
@@ -109,7 +109,7 @@
                 </mat-row>
             </mat-table>
             <mat-paginator [pageSizeOptions]="[10,25,50]"></mat-paginator>
-        </div>
+        <!-- </div> -->
     </mat-card-content>
     <!-- <mat-card-actions fxLayoutAlign="center center">
         <button [disabled]="loading" (click)="exportArray()" matTooltip="export to excel" class="mat-raised-button">
